# simplelog.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  index.html  search-index.js
.github/workflows/: ci.yml
examples/: custom_colors.rs  default_colors.rs  modulepad.rs  rgb_colors.rs  usage.rs
examples/paris_demo/: Cargo.toml
examples/paris_demo/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/str/: trait.FromStr.js
implementors/log/: trait.Log.js
implementors/simplelog/: trait.SharedLogger.js
implementors/std/error/: trait.Error.js
simplelog/: enum.LogLevelFilter.html  index.html  sidebar-items.js  struct.CombinedLogger.html  struct.Config.html  struct.SimpleLogger.html  struct.TermLogger.html  struct.WriteLogger.html  trait.SharedLogger.html
simplelog/config/: struct.Config.html
simplelog/loggers/: struct.CombinedLogger.html  struct.SimpleLogger.html  struct.TermLogger.html  struct.WriteLogger.html
simplelog/loggers/comblog/: struct.CombinedLogger.html
simplelog/loggers/simplelog/: struct.SimpleLogger.html
simplelog/loggers/termlog/: struct.TermLogger.html
simplelog/loggers/writelog/: struct.WriteLogger.html
src/: comblog.rs  config.rs  filelog.rs  format.rs  lib.rs  simplelog.rs  termlog.rs
src/loggers/: comblog.rs  logging.rs  mod.rs  simplelog.rs  termlog.rs  testlog.rs  writelog.rs
src/paris/: mod.rs
src/paris_macros/: mod.rs
src/simplelog/src/: config.rs.html  lib.rs.html
src/simplelog/src/loggers/: comblog.rs.html  logging.rs.html  mod.rs.html  simplelog.rs.html  termlog.rs.html  writelog.rs.html
