[package]
name = "simplelog"
version = "0.8.0"
edition = "2018"
authors = ["Drakulix <github@drakulix.de>"]
description = "A simple and easy-to-use logging facility for Rust's log crate"
documentation = "https://docs.rs/simplelog/"
repository = "https://github.com/drakulix/simplelog.rs"
readme = "README.md"
keywords = ["log", "simplelog", "filelog", "logging"]
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "LICENSE.APACHE2",
    "LICENSE.MIT",
]

[features]
test = []
default = ["termcolor"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
termcolor = { version = "1.1.*", optional = true }
chrono = "0.4.*"
