[package]
name = "simplelog"
version = "0.12.2"
edition = "2018"
authors = ["Drakulix <github@drakulix.de>"]
description = "A simple and easy-to-use logging facility for Rust's log crate"
documentation = "https://docs.rs/simplelog/"
repository = "https://github.com/drakulix/simplelog.rs"
readme = "README.md"
keywords = ["log", "simplelog", "filelog", "logging"]
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "LICENSE.APACHE2",
    "LICENSE.MIT",
]

[features]
test = []
default = ["termcolor", "local-offset"]
local-offset = ["time/local-offset"]

[dependencies]
log = { version = "0.4.*", features = ["std"] }
termcolor = { version = "^1.1", optional = true }
paris = { version = "~1.5", optional = true }
ansi_term = { version = "0.12", optional = true }
time = { version = "0.3.7", features = ["formatting", "macros"] }
